cluster/manifests/tauri-releases/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tauri-releases
  labels:
    name: tauri-releases
    # tauri-releases has a Gateway API gateway
    pod-security.kubernetes.io/enforce: baseline
