cluster/manifests/tauri-releases/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: tauri-releases
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tauri-releases
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
