cluster/manifests/tauri-releases/overlays/dev/istio_gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: tauri-releases
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - tauri-releases.minikube.127.0.0.1.nip.io
        - tauri-releases.kaidotio.dev
        - tauri-releases-public.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
