cluster/manifests/tauri-releases/overlays/dev/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tauri-releases
spec:
  parentRefs:
    - name: tauri-releases
  hostnames:
    - tauri-releases.minikube.127.0.0.1.nip.io
    - tauri-releases.kaidotio.dev
    - tauri-releases-public.kaidotio.dev
  rules:
    - backendRefs:
        - name: tauri-releases
          port: 8080
