cluster/manifests/tauri-releases/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tauri-releases
spec:
  gateways:
    - tauri-releases
  hosts:
    - tauri-releases.minikube.127.0.0.1.nip.io
    - tauri-releases.kaidotio.dev
    - tauri-releases-public.kaidotio.dev
  http:
    - route:
        - destination:
            host: tauri-releases-istio
            port:
              number: 80
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
