cluster/manifests/tauri-releases/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tauri-releases
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tauri-releases
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: tauri-releases
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tauri-releases-istio
spec:
  podSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: tauri-releases
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              istio: ingressgateway
      ports:
        - protocol: TCP
          port: 80
